--- a/scratch.html
+++ b/scratch.html
@@ -10,7 +10,8 @@
     <h1 id="top">Ultra Running</h1>
     <br>
     <a href="index.html">Home</a>
-    <div class="content">
+    <div class="content"><div class="positioned-div"><p>Anthony Hawkins</p>
+    </div>
         <div class="text">
             <ol class="center-list">
                 <li> Information about Ultra marathons<br>
